Fix form submission bug fixes and avoid content overlapping into footer. Remodel footer.

--- a/PurpuraWeb/wwwroot/css/UserManagement.css
+++ b/PurpuraWeb/wwwroot/css/UserManagement.css
@@ -39,6 +39,7 @@
     margin-left: 200px;
     padding: 1px 16px;
     height: 1000px;
+    margin-bottom: 20px;
 }
 
 @media screen and (max-width: 700px) {
